[gd_scene load_steps=10 format=3 uid="uid://b6rova6micwq8"]

[ext_resource type="Script" uid="uid://dt3vst28131ab" path="res://scenes/level.gd" id="1_2q6dc"]
[ext_resource type="Texture2D" uid="uid://bjr25isa6jets" path="res://images/level_select_inactive.png" id="2_mx8sn"]
[ext_resource type="PackedScene" uid="uid://biwjmiisnqjwo" path="res://scenes/level_arrow.tscn" id="2_w7c3h"]
[ext_resource type="Texture2D" uid="uid://dvxfirdbaqdlm" path="res://images/level_select_bg.png" id="2_w8frs"]
[ext_resource type="Texture2D" uid="uid://ch8rwi2mkmsar" path="res://images/level_select_active.png" id="3_ppgk2"]
[ext_resource type="Shader" uid="uid://dor4l4u17bg0a" path="res://plasma.gdshader" id="5_klq6b"]
[ext_resource type="Texture2D" uid="uid://bd2h7b4tbpkv" path="res://images/level_completed.png" id="6_2r41h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b121j"]
shader = ExtResource("5_klq6b")
shader_parameter/scale = 3.321
shader_parameter/speed = 0.578

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7c3h"]

[node name="Level" type="Node2D"]
script = ExtResource("1_2q6dc")

[node name="BgInactive" type="Sprite2D" parent="."]
position = Vector2(40, 40)
texture = ExtResource("2_mx8sn")

[node name="BgUnlocked" type="Sprite2D" parent="."]
position = Vector2(40, 40)
texture = ExtResource("3_ppgk2")

[node name="BgCompleted" type="Sprite2D" parent="."]
texture = ExtResource("2_w8frs")
offset = Vector2(40, 40)

[node name="BgExit" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_b121j")
offset_left = 5.0
offset_top = 5.0
offset_right = 75.0
offset_bottom = 75.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Arrows" type="Node2D" parent="."]

[node name="LevelLeft" parent="Arrows" instance=ExtResource("2_w7c3h")]
visible = false
position = Vector2(21, 39)
rotation = -3.14159

[node name="LevelRight" parent="Arrows" instance=ExtResource("2_w7c3h")]
visible = false
position = Vector2(63, 39)

[node name="LevelDown" parent="Arrows" instance=ExtResource("2_w7c3h")]
visible = false
position = Vector2(42, 62)
rotation = 1.5708

[node name="LevelUp" parent="Arrows" instance=ExtResource("2_w7c3h")]
visible = false
position = Vector2(42, 19)
rotation = -1.5708

[node name="ActivationArea" type="Area2D" parent="."]
position = Vector2(-8, -10)

[node name="Activation" type="ColorRect" parent="ActivationArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(10, 10)
mouse_filter = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
position = Vector2(50, 50)
shape = SubResource("RectangleShape2D_w7c3h")
debug_color = Color(1, 1, 1, 0.42)

[node name="LevelCompleted" type="Sprite2D" parent="."]
visible = false
position = Vector2(42, 40)
texture = ExtResource("6_2r41h")

[connection signal="clicked" from="Arrows/LevelLeft" to="." method="_on_level_left_clicked"]
[connection signal="clicked" from="Arrows/LevelRight" to="." method="_on_level_right_clicked"]
[connection signal="clicked" from="Arrows/LevelDown" to="." method="_on_level_down_clicked"]
[connection signal="clicked" from="Arrows/LevelUp" to="." method="_on_level_up_clicked"]
[connection signal="mouse_entered" from="ActivationArea" to="." method="_on_activation_area_mouse_entered"]
[connection signal="mouse_exited" from="ActivationArea" to="." method="_on_activation_area_mouse_exited"]
